--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img alt="cute cats" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOD8Oqu5iSROLPTFScH0DXuv5vr3rMIZ97yg&s">
     <script type="text/javascript" src="./script.js">
 </script>
 
